Refactor to migrate from `com.fasterxml.jackson` to `tools.jackson`, update imports, exception types, and serializers/deserializers across the codebase. Add `AbstractMvcTest` and update tests to simplify setup with shared MVC logic.